# ardrone_object_tracking

./: .gitignore  CMakeLists.txt  package.xml
include/ardrone_object_tracking/: vision-config.yml
include/cuke_vision/: detectObject.hpp
msg/: ObjectMsg.msg  boundingBoxMsg.msg
src/: .control_node.cpp.swp  ardrone_object_tracking_node.cpp  baseFrameBroadcasterNode.cpp  boundingBoxNode.cpp  control_node.cpp  cukeVisionNode.cpp  detectObject.cpp  stemDetectionNode.cpp  stereoCamNode.cpp
